--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   "dependencies": {
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
+    "chai-dom": "^1.8.1",
+    "chai-jquery": "^2.1.0",
     "chromedriver": "^2.45.0",
+    "jquery": "^3.3.1",
     "mocha-retry": "^0.1.0",
     "selenium-webdriver": "^3.6.0",
     "sleep-promise": "^8.0.1"
   },
   "devDependencies": {
-    "jsdom": "12.0.0",
+    "jsdom": "^12.2.0",
     "mocha": "^5.1.1",
     "mocha-jenkins-reporter": "^0.4.1",
     "mocha-jsdom": "^2.0.0",
-    "mochawesome": "^3.0.2"
+    "mochawesome": "^3.1.1"
   }
 }
