--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chromedriver": "^2.45.0",
     "jquery": "^3.3.1",
     "mocha-retry": "^0.1.0",
+    "mochawesomeplusplus": "^1.2.1",
     "selenium-webdriver": "^3.6.0",
     "sleep-promise": "^8.0.1"
   },
